--- a/css/main.css
+++ b/css/main.css
@@ -577,7 +577,6 @@ body {
   font-family: 'Rubik', sans-serif;
   background: #FFFFEA;
   background-size: 20px 20px;
-  background-image: -webkit-linear-gradient(left, #e9f0f0 1px, transparent 1px), -webkit-linear-gradient(top, #e9f0f0 1px, transparent 1px);
   background-image: -o-linear-gradient(left, #e9f0f0 1px, transparent 1px), -o-linear-gradient(top, #e9f0f0 1px, transparent 1px);
   background-image: linear-gradient(to right, #e9f0f0 1px, transparent 1px), linear-gradient(to bottom, #e9f0f0 1px, transparent 1px); }
   @media (min-width: 768px) and (orientation: portrait) {
@@ -772,8 +771,7 @@ body {
         display: -ms-grid;
         display: grid;
         -ms-grid-columns: (1fr)[4];
-        grid-template-columns: repeat(4, 1fr);
-        grid-gap: 8px; } }
+        grid-template-columns: repeat(4, 1fr); } }
   .menu__item {
     margin-top: 1rem;
     list-style: none; }
@@ -813,11 +811,12 @@ body {
                 flex-direction: column;
         width: 250px;
         height: 200px;
+        margin: 4px;
+        padding: 10px;
         border: 1px solid black;
         text-decoration: none;
         text-transform: none;
         color: black;
-        padding: 10px;
         -webkit-transition: background-color .2s linear;
         -o-transition: background-color .2s linear;
         transition: background-color .2s linear; } }
@@ -914,8 +913,6 @@ body {
   @media (min-width: 1366px) {
     .hero {
       background: #4ecc6f;
-      background: -webkit-radial-gradient(circle, #4ecc6f 0%, rgba(255, 255, 255, 0) 62%);
-      background: -webkit-radial-gradient(circle, #4ecc6f 0%, rgba(255, 255, 255, 0) 60%);
       background: -o-radial-gradient(circle, #4ecc6f 0%, rgba(255, 255, 255, 0) 60%);
       background: radial-gradient(circle, #4ecc6f 0%, rgba(255, 255, 255, 0) 60%);
       filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#4ecc6f", endColorstr="#ffffff", GradientType=1); } }
